# TERMUX-XARK

./: README.ar.md  README.md
.github/workflows/: distros.yml
xodosark-app/: apk  build.gradle.kts  gradle.properties  keystore.properties.example  settings.gradle.kts
xodosark-app/app/: proguard-rules.pro
xodosark-app/gradle/: libs.versions.toml
xodosark-native/: Cargo.toml  README.ar.md  README.md  rename
xodosark-native/scripts/: build_rust.sh
xodosark-native/src/: lib.rs
xodosark-native/src/android/: mod.rs  proot.rs  rootfs_fetch.rs
xodosark-wayland/: Android.mk  Application.mk  keymap_us.xkb
xodosark-wayland/build-src/wayland-protocols/: meson.build
xodosark-wayland/libffi/build-android/: Makefile  config.status  fficonfig.h  libffi.la  libffi.map  libtool  local.exp
xodosark-wayland/protocol/: fractional-scale-v1-server-protocol.h  linux-dmabuf-unstable-v1-server-protocol.c  presentation-time-server-protocol.c  xdg-decoration-unstable-v1-server-protocol.h  xdg-shell-server-protocol.c  xdg-shell-server-protocol.h
xodosark-wayland/scripts/: build-wayland-android.sh  cross-android-arm64.txt
xodosark-wayland/src/: buffer.c  compositor.c  compositor.h  data_device.c  fractional_scale.c  jni_bridge.c  keyboard_input.c  keycode_map.c  keycode_map.h  linux_dmabuf.c  output.c  pointer_constraints.c  pointer_input.c  presentation.c  relative_pointer.c  renderer.c  renderer.h  seat.c  server_internal.h  single_pixel_buffer.c  subcompositor.c  surface.c  viewporter.c  xdg_decoration.c  xdg_output.c  xdg_shell.c
(+150 files in other folders)
